[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/UI/AttackUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/PlayerUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Debug/DebugButtons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/UI/MiniMap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/LoadingScreen.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/UI/GameOverUI.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=7]
[ext_resource path="res://Scenes/UI/InventoryUI.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI/ItemDescriptionWindow.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/MoveCursor.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/MoveCursor.gd" type="Script" id=11]
[ext_resource path="res://Scenes/UI/StartMenu.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/UI/PauseMenu.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/UI/SettingsMenu.tscn" type="PackedScene" id=14]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[node name="UI" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 7 )
DebugUI = true

[node name="DebugButtons" parent="." instance=ExtResource( 3 )]

[node name="AttackUI" parent="." instance=ExtResource( 1 )]

[node name="PlayerUI" parent="." instance=ExtResource( 2 )]

[node name="MiniMap" parent="." instance=ExtResource( 4 )]

[node name="InventoryUI" parent="." instance=ExtResource( 8 )]
visible = false

[node name="GameOverUI" parent="." instance=ExtResource( 6 )]
visible = false

[node name="LoadingScreen" parent="." instance=ExtResource( 5 )]
visible = false

[node name="ItemDescriptionWindow" parent="." instance=ExtResource( 9 )]
visible = false

[node name="MoveCursorBackground" parent="." instance=ExtResource( 10 )]
material = SubResource( 1 )

[node name="MoveCursor" parent="MoveCursorBackground" index="0"]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )

[node name="StartMenu" parent="." instance=ExtResource( 12 )]

[node name="PauseMenu" parent="." instance=ExtResource( 13 )]
visible = false

[node name="SettingsMenu" parent="." instance=ExtResource( 14 )]
visible = false

[editable path="MoveCursorBackground"]
